# ai-recipe-application

./: .gitignore  .vercelignore  CLAUDE.md  context_processors.py  features.txt  main.py  pyproject.toml  requirements.txt  testing.txt  vercel.json
ai_recipe_app/: admin.py  apps.py  chat.py  context_processors.py  models.py  prompt.py  tests.py  urls.py  utils.py  views.py
ai_recipe_app/migrations/: 0001_initial.py  0002_alter_chat_id.py  0003_alter_chat_id.py  0004_chat_is_public.py  0005_step_detail_cache.py  0006_chat_is_pinned.py  0007_chatmessage_raw_content.py  0008_chatmessage_media_json.py  0009_remove_chatmessage_media_json.py  0010_food_image_cache.py  0011_chatmessage_image.py
ai_recipe_app/prompt/: __init__.py  image_recipe_prompt.py  instruction_steps_prompt.py  recipe_system_prompt.py  user_profile_prompt.py
ai_recipe_app/static/: chat.css  chat.js  output.css  sidebar.js
ai_recipe_app/templates/: 404.html  base.html  chat.html  settings.html
api/: index.py
authentication/: admin.py  apps.py  backends.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_profile_picture.py  0003_alter_user_profile_picture.py  0004_user_recipe_preferences.py  0005_notification.py  0006_remove_user_first_name_remove_user_last_name_and_more.py  0007_notification_preferences.py
config/: settings.py  urls.py
static/: chat.js  output.css  share.js  sidebar.js
static/src/: input.css
templates/: base.html  chat.html  home.html  settings.html  shared_chat.html
templates/partials/: sidebar.html  (+2 more)
(+4 files in other folders)
