[project]
name = "ai-recipe-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "langchain>=1.2.15",
    "langchain-mistralai>=1.1.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
