[project]
name = "ai-recipe-generator"
version = "0.1.0"
description = "A Django web app that streams AI-generated recipes using Mistral via LangChain, with a chat-style interface and Server-Sent Events for real-time token streaming."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=47.0.0",
    "dj-database-url>=3.1.2",
    "django>=6.0.4",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-mistralai>=1.1.2",
    "langchain-openai>=1.2.1",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
